[package]
name = "restaked"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[dependencies]
clap = "2.33.0"

near-crypto = { path = "../../core/crypto" }
near-primitives = { path = "../../core/primitives" }
near-jsonrpc-client = { path = "../../chain/jsonrpc/client" }
near = { path = "../../near" }

testlib = { path = "../../test-utils/testlib" }
